                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 04-07-2005 fixed: Shoutcast filereading could cause infinite loop.
 - 04-07-2005 fixed: Scaling of list + textbox controls.
 - 04-07-2005 fixed: Some embedded image thumbs in mp3s weren't loaded correctly.
 - 04-07-2005 fixed: Slow loading of root folders due to new thumb reading code.
 - 04-07-2005 added: Thumb generator generates folder thumbs in my music.  They're now also on a transparent background.
 - 03-07-2005 changed: removed <mplayerdebug> from xboxmediacenter.xml as it's no longer needed, <loglevel>0 enables it now instead
 - 02-07-2005 changed: Some of the HTTPAPI command names to make the names more logical - the old ones still work though
 - 02-07-2005 added: Visualisation.Name info tag.
 - 02-07-2005 updated: Swedish strings.xml Thanks to the updater/s that fixed the poor translations!
 - 02-07-2005 fixed: Programs icons crash.
 - 02-07-2005 fixed: <universalremote> tags were incorrect in keymap.xml.
 - 02-07-2005 fixed: Scaling of python windows.
 - 02-07-2005 changed: 2 small updates to Build.bat: made config paths long filename & removed 2 unnecessary copy actions.
 - 01-07-2005 added: ASSERT() code to GUISettings to make sure settings aren't read before they're initialized - thanks to jslawler for finding this.
 - 01-07-2005 changed: Removed the need for HasDefaultThumbnail() and so on - if no thumb exists, thumbviews now show the large version of the icon at render time.
 - 01-07-2005 added: Window methods getResolution() and setCoordinateResolution() to python interface.  Should allow XBMC to scale control sizes and positions, removing the burden off python coders.