@@ -41,6 +41,9 @@ public:
   virtual void AllocResources() ;
   virtual void FreeResources() ;
   virtual void DynamicResourceAlloc(bool bOnOff);
+  virtual void SetPosition(int iPosX, int iPosY);
+  virtual void SetWidth(int iWidth);
+  virtual void SetHeight(int iHeight);
   void SetScrollySuffix(const CStdString& wstrSuffix);
   void SetImageDimensions(int iWidth, int iHeight);
   void SetItemHeight(int iHeight);
