@@ -5,6 +5,9 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 04-07-2005 fixed: Added workaround to MyMusic Library view to correctly handle same album name by different artists.
+ - 04-07-2005 fixed: Reordered GUI_MSG_EXECUTE so that IsBuiltIn() is first test.  Fixes issues with things like XBMC.ActivateWindow(MyMusic, shout://www.shoutcast.com).
+ - 04-07-2005 fixed: Scaling of Thumbpanel and ListControlEx.
  - 04-07-2005 fixed: Shoutcast filereading could cause infinite loop.
  - 04-07-2005 fixed: Scaling of list + textbox controls.
  - 04-07-2005 fixed: Some embedded image thumbs in mp3s weren't loaded correctly.
